# RoundFatherBot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5c1c6f1c6345_add_bot_settings_table.py  83a3c983eb6f_initial_tables.py  c3fa5a968749_remove_daily_limit_from_users.py
bot/: config.py  logging_opensearch.py  main.py  metrics.py  metrics_server.py
bot/filters/: is_admin.py
bot/handlers/: __init__.py  admin.py  premium.py  start.py  status.py  video.py
bot/middlewares/: db.py  metrics.py  rate_limit.py  user.py
bot/models/: __init__.py  admin.py  base.py  mailing.py  mailing_log.py  premium.py  preset.py  setting.py  stats.py  task.py  user.py
bot/services/: broadcaster.py  notification_service.py  stats.py  tasks.py  video_processor.py
docker/: Dockerfile  Dockerfile.worker
tests/: test_auth.py  test_stats.py  test_video_processor.py
web/: app.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.jsx  api.js
web/frontend/src/components/: Layout.jsx  Nav.jsx
web/frontend/src/pages/: Dashboard.jsx  Login.jsx  Mailings.jsx  Revenue.jsx  Settings.jsx
web/routes/: auth.py  mailings.py  revenue.py  settings.py  stats.py
web/templates/: dashboard.html  login.html  mailings.html  revenue.html  settings.html
